@@ -2,6 +2,7 @@ ChangeLog
 =========
 
 0.6.0.dev0
+    * Introduce `const.State.PREPARED`
 
 0.5.0
     * FILE_CHANGED event sends free_space
